gitops/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: token-price-service
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
      - name: ghcr-cred
      containers:
      - name: token-price-service
        image: ghcr.io/uniwertz/token-price-service:main-98db9264f67aeddbf23a304b42a6daeabb72c2a3
        imagePullPolicy: IfNotPresent
