gitops/overlays/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: token-price-service-ingress
spec:
  tls:
  - hosts:
    - dsavin.tech
    secretName: token-price-service-tls
  rules:
  - host: dsavin.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: token-price-service
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: token-price-service-api-ingress
spec:
  tls:
  - hosts:
    - dsavin.tech
    secretName: token-price-service-api-tls
  rules:
  - host: dsavin.tech
    http:
      paths:
      - path: /pricing(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: token-price-service
            port:
              number: 3000
